# rag-dnd

./: .gitignore  GEMINI.md  README.md  client_config.py  config.py  log.py  main.py  pyproject.toml  pyrefly.toml  rag-cli.py  rag-hook.bat  rag-hook.py  rag-log-hook.py  rag-mcp-server.py  rag-query-hook.py  setup.ps1  setup.sh
.agents/skills/code-review/: SKILL.md
.gemini-sample/: settings.json
api/: __init__.py  __main__.py  routes.py  routes_v2.py  schemas.py  upload.py
doc/: Exploring Gemini CLI Features.md  campaign_structure_design.md  code_review.md  fastmcp.txt  llms.txt  manual_test_checklist.md  migration_plan.md  research.md  roadmap.md  todo.md  v04_data_model.md  v04_implementation_plan.md
doc/prompt_engine/: character_system_detailed_design.md  character_system_specification.md  prompt_engine_requirements.md  structured_data_requirements.md
prompts/: qry_expansion_system_prompt.txt  session_summary.txt
prompts/game/: instructions.j2
rag/: __init__.py  chunker.py  database.py  embeddings.py  llm.py  manager.py  models.py  services.py  store.py
rag_client/: __init__.py  client.py  transcript.py
scripts/: analyze_logs.py  generate_client_models.py  install.py  new_game.py  seed_campaign.py
src/rag_dnd/: campaign.py  config.py  log.py
src/rag_dnd/cli/: main.py
src/rag_dnd/client/: __init__.py  client.py  config.py  models.py  transcript.py  utils.py
src/rag_dnd/core/: __init__.py  config.py  database.py  embeddings.py  exceptions.py  llm.py  manager.py  models.py  services.py  store.py
src/rag_dnd/game/: __init__.py  exceptions.py  manager.py  models.py  schemas.py
src/rag_dnd/hooks/: log_hook.py  query_hook.py
src/rag_dnd/mcp/: server.py
src/rag_dnd/rag/: __init__.py  campaign.py  chunker.py  database.py  embeddings.py  exceptions.py  llm.py  manager.py  models.py  services.py  store.py
src/rag_dnd/server/: __init__.py  dependencies.py  main.py  routes.py  routes_v2.py  schemas.py  upload.py
src/rag_dnd/shared/: __init__.py  enums.py  exceptions.py  schemas.py
