[project]
name = "rag-dnd"
version = "0.2.0"
description = "D&D RAG campaign history"
readme = "README.md"
authors = [
    { name = "Tim Jansma", email = "t.jansma@ligit.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.4.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "langchain>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=0.2.0",
    "nltk>=3.9.3",
    "platformdirs>=4.5.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "tomlkit>=0.14.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=5.0.0",
    "triton-windows>=3.6.0.post24; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    "typer>=0.12.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_dnd"]

[project.scripts]
rag-cli = "rag_dnd.cli.main:app"
rag-server = "rag_dnd.server.main:start"
rag-mcp = "rag_dnd.mcp.server:main"
rag-hook-context = "rag_dnd.hooks.query_hook:main"
rag-hook-logger = "rag_dnd.hooks.log_hook:main"
